<resources>
    <string name="app_name">conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_feed">Feed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_auth">Login/SignUp</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="menu_my_feed">MyFeed</string>
    <string name="settings">Settings</string>
    <string name="arg_article_id">ARTICLE_ID</string>
    <string name="action_logout">LogOut</string>
</resources>